# hyprland-ipc

./: Cargo.toml  README.md
examples/: listen.rs
src/: dispatch.rs  error.rs  event.rs  lib.rs  params.rs
