[package]
name = "hyprland-ipc"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Hyprland ipc access"
readme = "README.md"
documentation = "https://docs.rs/hyprland-ipc"
repository = "https://github.com/morr0ne/hyprland-ipc"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
futures-core = "0.3.29"
pin-project-lite = "0.2.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["io-util", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
